--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       <p>
         Projeto construído para fins didáticos, com o objetivo de colocar em
         prática os conhecimentos de HTML, CSS e JavaScript.
+         (Dev. Katia Ferreira de Sousa Ribeiro)
       </p>
       <img src="assets/images/footer/Info.png" height=150 alt="logo infoServDigital">
     </footer>
